tests/error/redeclaration_of_structure_one_with_pointer_to_int_one_with_pointer_to_void.c
// fail "Redeclaration of type."

struct structure{
    void *a;
};

struct structure{
    int *a;
};


int main(){
    
}
